--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,27 @@
-name: Convert Markdown to PDF
+# name: Convert Markdown to PDF
 
-on:
-  push:
-    branches:
-      - main
+# on:
+#   push:
+#     branches:
+#       - main
 
-jobs:
-  convert:
-    runs-on: ubuntu-latest
+# jobs:
+#   convert:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.12
+#     - name: Set up Python
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: 3.12
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get install -y pandoc texlive-latex-base
-        pip install pypandoc
+#     - name: Install dependencies
+#       run: |
+#         sudo apt-get install -y pandoc texlive-latex-base
+#         pip install pypandoc
 
-    - name: Convert Docs
-      run: python main.py
+#     - name: Convert Docs
+#       run: python main.py
