--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python
-        uses: actions/setup-java@v5
+        uses: actions/setup-python@v5
         with:
           python-version: 3.12
       - name: Install dependencies
