--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,12 +54,12 @@ jobs:
         run: tree .
       - name: Rename resumes
         run: |
-          mv assets/docs/resume_br.md resume_br.md
-          mv assets/docs/resume_en.md resume_en.md
-          mv assets/docs/resume_br.pdf resume_br.pdf
-          mv assets/docs/resume_en.pdf resume_en.pdf
-          mv assets/docs/resume_br.docx resume_br.docx
-          mv assets/docs/resume_en.docx resume_en.docx
+          mv docs/resume_br.md md_resume_br.md
+          mv docs/resume_en.md md_resume_en.md
+          mv docs/resume_br.pdf pdf_resume_br.pdf
+          mv docs/resume_en.pdf pdf_resume_en.pdf
+          mv docs/resume_br.docx docx_resume_br.docx
+          mv docs/resume_en.docx docx_resume_en.docx
       - name: Upload release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
